--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html>
     <head>
+        <script src="https://kit.fontawesome.com/4f726d83eb.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <title>Business Card</title>
     </head>
     <body>
         <div class="card">
             <img src="/display.jpg" alt="display image of Soumyadip Bhowmik" class="avatar">
-            <div class="columns">
+            <div class="information">
                 <h3>Soumyadip Bhowmik</h3>
-                <p>Student</p>
+                <p>B. Tech Undergrad 2023</p>
                 <h4>West Bengal, India</h4>
+                <ul class="handles">
+                    <li><a href="https://twitter.com/soumyaadipp" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/soumyadip-bhowmik/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/SoumyadipBhowmik" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                </ul>
             </div>
         </div>
     </body>
